Remade some design, repaired bug in deleting, bug in naming folders and some initial logic behind main content is build

--- a/src/style.css
+++ b/src/style.css
@@ -85,14 +85,23 @@ body {
 }
 
 .add-folder {
+  transition: 0.2s;
   cursor: pointer;
   border: 2px solid black;
   background-color: greenyellow;
   width: 60%;
   height: 50%;
+  font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.add-folder:hover {
+  border: 3px solid black;
+  font-size: 18px;
+  font-weight: 600;
+  width: 65%;
+  height: 55%;
 }
 
 .bar-add {
@@ -111,6 +120,10 @@ body {
   width: 50%;
   display: flex;
   justify-content: space-around;
+}
+
+.container-name > * {
+  cursor: pointer;
 }
 
 .menu-folder {
@@ -195,6 +208,44 @@ body {
   height: 20px;
 }
 
-/* M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
-M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>close</title><path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /></svg> */
+.main-middle {
+  display: grid;
+  resize: both;
+  grid-template-rows: 20% repeat(10, 10%);
+}
+
+.main-name {
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: space-around;
+}
+
+.top-adding {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.add-todo {
+  display: grid;
+}
+
+.add-todo > svg {
+  align-self: center;
+  justify-self: center;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.input-search {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.input-date {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
